// ============================================================================
// /manufacturing/shop-floor-execution-service (版本 2.0)
// 描述: 提供车间生产订单的报工、物料消耗和收货功能。
//       字段设计参考核心ERP的 AFKO (订单抬头), AFRU (报工), RESB (预留/组件) 表。
// ============================================================================

syntax = "proto3";

package enterprise.manufacturing.execution;

option java_package = "com.enterprise.manufacturing.execution.v2";
option java_multiple_files = true;
option go_package = "github.com/enterprise-extensions/manufacturing/execution/v2;execution";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

// ============================================================================
// 服务定义: ShopFloorExecutionService
// ============================================================================

service ShopFloorExecutionService {
  // 获取生产订单详情
  rpc GetProductionOrder(GetProductionOrderRequest) returns (ProductionOrderDetail);

  // 对生产订单工序进行报工确认
  rpc ConfirmProductionOperation(ConfirmOperationRequest) returns (ConfirmOperationResponse);

  // 为生产订单过账物料消耗 (发料)
  rpc PostMaterialConsumption(PostMaterialMovementRequest) returns (enterprise.common.StockMovementResponse);

  // 为生产订单过账成品收货
  rpc PostGoodsReceiptForOrder(PostMaterialMovementRequest) returns (enterprise.common.StockMovementResponse);
}

// ============================================================================
// 数据结构: ProductionOrder (生产订单)
// ============================================================================

// 生产订单详情 (参考: AFKO, AUFK, AFPO)
message ProductionOrderDetail {
  // 生产订单号 (原: AUFNR)
  string order_number = 1;
  // 订单类型 (原: AUART)
  string order_type = 2;
  // 物料编号 (原: MATNR)
  string material = 3;
  // 工厂 (原: WERKS)
  string plant = 4;
  // 订单总数量 (原: GAMNG)
  string total_quantity = 5;
  // 已交付数量 (原: GMEIN)
  string delivered_quantity = 6;
  // 单位
  string unit = 7;
  // 基本开始日期 (原: GSTRP)
  google.protobuf.Timestamp basic_start_date = 8;
  // 基本完成日期 (原: GLTRP)
  google.protobuf.Timestamp basic_finish_date = 9;
  // 订单状态 (例如, REL, PCNF, CNF, DLV)
  string status = 10;
  // 生产订单工序列表
  repeated ProductionOperation operations = 11;
  // 生产订单组件列表
  repeated ProductionComponent components = 12;
}

// 生产订单工序 (参考: AFVC)
message ProductionOperation {
  // 工序编号 (原: VORNR)
  string operation_number = 1;
  // 工作中心 (原: ARBPL)
  string work_center = 2;
  // 工序描述 (原: LTXA1)
  string description = 3;
  // 已确认产量 (原: LMNGA)
  string confirmed_yield = 4;
  // 状态
  string status = 5;
}

// 生产订单组件 (参考: RESB)
message ProductionComponent {
  // 预留项目 (原: RSPOS)
  int32 reservation_item = 1;
  // 物料编号 (原: MATNR)
  string material = 2;
  // 需求数量 (原: BDMNG)
  string requirement_quantity = 3;
  // 已领料数量 (原: ENMNG)
  string withdrawn_quantity = 4;
  // 单位 (原: MEINS)
  string unit = 5;
  // 存储地点 (原: LGORT)
  string storage_location = 6;
  // 倒冲标识 (原: KZEAR)
  bool backflush = 7;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 获取生产订单请求
message GetProductionOrderRequest {
  // 生产订单号
  string order_number = 1;
}

// 报工确认请求 (参考: AFRU)
message ConfirmOperationRequest {
  // 生产订单号
  string order_number = 1;
  // 工序编号
  string operation_number = 2;
  // 确认的合格数量 (原: LMNGA)
  string yield_quantity = 3;
  // 确认的报废数量 (原: XMNGA)
  string scrap_quantity = 4;
  // 单位
  string unit = 5;
  // 是否为最后一道工序确认 (原: AUERU)
  bool final_confirmation = 6;
  // 过账日期 (原: BUDAT)
  google.protobuf.Timestamp posting_date = 7;
  // 人员编号 (原: PERNR)
  string personnel_number = 8;
}

// 报工确认响应
message ConfirmOperationResponse {
  // 操作是否成功
  bool success = 1;
  // 生成的报工确认号 (原: RUECK)
  string confirmation_number = 2;
  // 从核心ERP返回的消息列表
  repeated enterprise.common.ApiMessage messages = 3;
}

// 物料移动请求 (用于发料和收货)
message PostMaterialMovementRequest {
  // 生产订单号
  string order_number = 1;
  // 移动抬头
  enterprise.common.StockMovementHeader header = 2;
  // 移动行项目
  repeated enterprise.common.StockMovementItem items = 3;
}
